<resources>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_name">Немного о Алексине</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Немного о Алексине</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="ac">Сбросить</string>
    <string name="app_name2">Немного о Алексине</string>
    <string name="app_name3">Немного о Алексине</string>
    <string name="app_name4">Немного о Алексине</string>
    <string name="app_name5">Немного о Алексине</string>
    <string name="button_aleks">О городе Алексин</string>
    <string name="main_text_size">Размер главного текста</string>
    <string name="nastroiki_texta">Настройки текста</string>
    <string name="dostopri">Достопримечательности</string>
    <string name="shop">Магазины</string>
    <string name="school">Общеобразовательные организации</string>
    <string name="predpri">Предприятия</string>
    <string name="med">Медицинские центры</string>
    <string name="aleks">О городе Алексин</string>
    <string name="mest">Места</string>
    <string name="shop_btn1">Продукты питания</string>
    <string name="shop_btn2">Электроника</string>
    <string name="shop_btn3">Спорт, туризм, рыбалка</string>
    <string name="shop_btn4">Одежда</string>
    <string name="shop_btn5">Зоотовары</string>
    <string name="shop_btn6">Хозтовары</string>
    <string name="shop_btn7">Vape Shops</string>
    <string name="shop_btn8">Торговые центры</string>
    <string name="school_btn1">Школы</string>
    <string name="school_btn2">Техникумы</string>
    <string name="aleks_1">Годом основания Алексина считается 1348г. Именно этим годом датировано первое письменное упоминание в Никоновской летописи. Летописец сообщает: «…князь Темир Ординский приходи ратью ко граду Олексину святыго чудотворца Петра, митрополита Киевского и всея Руси, и посад пожже…».

В 1472 г. защитники Алексина сыграли важную роль в отражении большого похода хана Ахмата на Русь. Город был осаждён, но время, потраченное ханом на захват Алексина, было использовано русскими для стягивания сил к месту сражения. Линия Оки оказалась прочно занятой русскими полками, и хан не пошёл на риск решительного сражения. Впервые за всю историю татаро-монгольского ига хан вернулся в Орду, не отважившись на сражение с русским войском.

В 1761 г. Алексин — маленький город с административным центром на территории острога. Кое-где сохранились остатки крепостной стены. Опасность пожаров в таком городе была очень велика, и они неоднократно вспыхивали в Алексине. Пожар, возникший в 1768 г. в доме одного из жителей Стрелецкой слободы, надолго запомнился алексинцам. При сильном ветре в пламени разбушевавшегося огня за три часа сгорело 224 двора, две деревянные церкви, ратуша, купеческие лавки, хозяйственные строения, даже остатки старинной дубовой крепости. Во всем городе уцелело всего четыре купеческих дома. В 1762 г. в Петербурге была создана Комиссия о каменном строении Санкт-Петербурга и Москвы, занимавшаяся планировочными работами для обеих столиц. План застройки Алексина был седьмым по счету для городов русской провинции. Он составлялся в большой спешке: нужно было успеть разбить новые улицы и нарезать участки прежде, чем погорельцы построят дома на старых местах. План был составлен за восемь месяцев и 4 апреля 1769 г. утвержден Екатериной II.

В конце 19 — начале 20 вв. Алексин — городок с несколькими мелкими кожевенными, салотопенными и кирпичными заводами.

В годы Великой Отечественной войны 1941-45 был оккупирован немецко-фашистскими войсками 29 ноября 1941. Освобождён 17 декабря 1941 г. войсками Западного фронта в ходе Калужской операции.

В 1958 г. в состав Алексина вошли рабочие посёлки Мышега, Петровский, Высокое.

В настоящее время Алексин является одной из наиболее развитых промышленных зон Тульской области. В Алексине более 130 памятников истории и культуры, пять из которых – федерального значения.

Далее для ознакомления предлагаем вам подробные статьи о истории города, происхождении названий.</string>
</resources>