<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.Aleksin"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/purple_500"
                app:popupTheme="@style/Theme.Aleksin.NoActionBar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/button_aleks"
        android:layout_width="299dp"
        android:layout_height="78dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/custom_buttons"
        android:text="@string/aleks"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_dostopri"
        android:layout_width="299dp"
        android:layout_height="78dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/custom_buttons"
        android:text="@string/dostopri"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_aleks" />

    <Button
        android:id="@+id/button_shop"
        android:layout_width="299dp"
        android:layout_height="78dp"
        android:layout_marginTop="164dp"
        android:background="@drawable/custom_buttons"
        android:text="@string/shop"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_dostopri" />

    <Button
        android:id="@+id/button_school"
        android:layout_width="299dp"
        android:layout_height="78dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/custom_buttons"
        android:text="@string/school"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_shop"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>